FSM implemented for controllable player
Finite state machine - Idle, Attack, Move

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
-"folded_lines": Array[int]([]),
+"column": 3,
+"folded_lines": Array[int]([9]),
 "h_scroll_position": 0,
-"row": 24,
+"row": 40,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 28,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -34,13 +34,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 25,
+"scroll_position": 4.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 9,
+"selection_from_line": 25,
 "selection_to_column": 5,
-"selection_to_line": 10,
+"selection_to_line": 26,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 34,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
+"row": 18,
+"scroll_position": 7.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 18,
+"selection_to_column": 37,
+"selection_to_line": 25,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,10 +81,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
