--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Player.tscn", "res://firstmap.tscn")
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 current_scene="res://Player.tscn"
 selected_bottom_panel_item=0
 
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Player.gd", "res://StateMachine/PlayerStates.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
 selected_script="res://Player.gd"
-open_help=[]
+open_help=["CharacterBody2D", "Node"]
 script_split_offset=70
 list_split_offset=57
 
