Edited attack in player FSM
Player hit animation left or right side with mouse click.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-327
+dock_hsplit_3=-315
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Player.gd", "res://StateMachine/PlayerStates.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
-selected_script="res://Player.gd"
-open_help=["CharacterBody2D", "Node"]
+selected_script="res://StateMachine/AttackState.gd"
+open_help=["CanvasItem", "CharacterBody2D", "InputEventMouse", "Node", "Node2D", "Vector2"]
 script_split_offset=70
 list_split_offset=57
 
