Archer working movement FSM

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,29 @@
 list=Array[Dictionary]([{
 "base": &"State",
+"class": &"ArcherAttackState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Shoot.gd"
+}, {
+"base": &"State",
+"class": &"ArcherIdleState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Node.gd"
+}, {
+"base": &"State",
+"class": &"ArcherRunState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Run.gd"
+}, {
+"base": &"Node",
+"class": &"ArcherStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/ArcherStateMachine.gd"
+}, {
+"base": &"State",
 "class": &"AttackState",
 "icon": "",
 "language": &"GDScript",
