--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,32 +12,32 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=401
 dock_hsplit_3=-315
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://StateMachine/State.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://StateMachine/", "res://Assets/Tiny Swords (Update 010)/", "res://Assets/Tiny Swords (Update 010)/UI/", "res://Assets/Tiny Swords (Update 010)/Terrain/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Trees/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Resources/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/", "res://Assets/Tiny Swords (Update 010)/Factions/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Tiny Swords (Update 010)/Deco/", "res://Assets/Shikashi\'s Fantasy Icons Pack v2/", "res://Assets/Modern_Interiors_Free_v2.2/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/Archer_Blue_(NoArms).png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Characters/", "res://Assets/", "res://Assets/Tiny Swords (Update 010)/", "res://Assets/Tiny Swords (Update 010)/UI/", "res://Assets/Tiny Swords (Update 010)/Terrain/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Trees/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Resources/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/", "res://Assets/Tiny Swords (Update 010)/Factions/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Shikashi\'s Fantasy Icons Pack v2/", "res://Assets/Modern_Interiors_Free_v2.2/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Player.tscn", "res://firstmap.tscn")
+open_scenes=PackedStringArray("res://firstmap.tscn", "res://Characters/Archer.tscn", "res://Characters/Knight.tscn")
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Player.tscn"
+current_scene="res://Characters/Archer.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Player.gd", "res://StateMachine/PlayerStates.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
-selected_script="res://StateMachine/AttackState.gd"
+open_scripts=["res://Characters/ArcherStateMachine.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://Characters/Node.gd", "res://StateMachine/PlayerStates.gd", "res://Characters/Run.gd", "res://StateMachine/RunState.gd", "res://Characters/Shoot.gd", "res://StateMachine/State.gd"]
+selected_script="res://Characters/Run.gd"
 open_help=["CanvasItem", "CharacterBody2D", "InputEventMouse", "Node", "Node2D", "Vector2"]
 script_split_offset=70
 list_split_offset=57
