--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,28 +1,18 @@
-[res://Player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 3,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 40,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://StateMachine/PlayerStates.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
+"row": 89,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 89,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 25,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 25,
@@ -52,13 +42,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 12.0,
+"row": 50,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 9,
-"selection_to_column": 46,
-"selection_to_line": 9,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 50,
 "syntax_highlighter": "GDScript"
 }
 
@@ -67,12 +57,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 33,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 33,
 "syntax_highlighter": "GDScript"
 }
 
@@ -81,10 +75,88 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 34,
+"scroll_position": 10.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 34,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Knight.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/ArcherStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 31.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Node.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 26,
+"selection_from_line": 22,
+"selection_to_column": 27,
+"selection_to_line": 22,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Run.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 31,
+"scroll_position": 23.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Shoot.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
