--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,21 +1,3 @@
-[res://StateMachine/PlayerStates.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 89,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 89,
-"syntax_highlighter": "GDScript"
-}
-
 [res://StateMachine/State.gd]
 
 state={
@@ -24,13 +6,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
+"row": 4,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 25,
-"selection_to_column": 5,
-"selection_to_line": 26,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -39,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 50,
+"row": 23,
+"scroll_position": 17.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -57,16 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
+"row": 28,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 33,
+"selection_from_column": 4,
+"selection_from_line": 26,
+"selection_to_column": 37,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -75,16 +49,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 10.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 34,
+"row": 18,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -93,62 +63,44 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
+"row": 8,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Characters/ArcherStateMachine.gd]
+[res://StateMachine/ArcherStateMachine.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 31.0,
+"row": 50,
+"scroll_position": 32.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Characters/Node.gd]
+[res://StateMachine/ArcherShootState.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 9.0,
-"selection": true,
-"selection_from_column": 26,
-"selection_from_line": 22,
-"selection_to_column": 27,
-"selection_to_line": 22,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Characters/Run.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 31,
-"scroll_position": 23.0,
+"row": 15,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Characters/Shoot.gd]
+[res://StateMachine/ArcherRunState.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -156,8 +108,44 @@ state={
 "column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
+"row": 23,
+"scroll_position": 13.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 23,
+"selection_to_column": 33,
+"selection_to_line": 23,
+"syntax_highlighter": "GDScript"
+}
+
+[res://StateMachine/ArcherIdleState.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 9,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 7.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://StateMachine/KnightStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 36.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 8,
+"selection_to_column": 18,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
