Archer bow animation complete

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,9 +6,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
-"selection": false,
+"row": 22,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 22,
+"selection_to_column": 5,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,12 +81,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 32.0,
-"selection": false,
+"row": 73,
+"scroll_position": 20.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 47,
+"selection_to_column": 22,
+"selection_to_line": 73,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,11 +99,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 42.0,
+"row": 63,
+"scroll_position": 66.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -127,7 +135,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 18,
-"scroll_position": 7.0,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
