--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/Arrow.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Assets/", "res://Assets/Tiny Swords (Update 010)/", "res://Assets/Tiny Swords (Update 010)/UI/", "res://Assets/Tiny Swords (Update 010)/Terrain/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Trees/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Resources/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/", "res://Assets/Tiny Swords (Update 010)/Factions/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Assets/Tiny Swords (Update 010)/UI/", "res://Assets/Tiny Swords (Update 010)/Terrain/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Trees/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Resources/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Gold Mine/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://firstmap.tscn", "res://Characters/Archer.tscn", "res://Characters/Knight.tscn", "res://walesmap.tscn")
-center_split_offset=-347
+center_split_offset=-351
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Characters/Archer.tscn"
+current_scene="res://Characters/Knight.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
+open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
 selected_script="res://StateMachine/ArcherShootState.gd"
 open_help=["AnimationPlayer", "CanvasItem", "CharacterBody2D", "Input", "InputEventMouse", "Node", "Node2D", "Vector2"]
 script_split_offset=70
