--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://firstmap.tscn", "res://Characters/Archer.tscn", "res://Characters/Knight.tscn", "res://walesmap.tscn", "res://Characters/Arrow.tscn")
 center_split_offset=-247
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-current_scene="res://Characters/Archer.tscn"
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+current_scene="res://Characters/Knight.tscn"
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
-selected_script="res://StateMachine/ArcherShootState.gd"
+open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://StateMachine/State.gd"]
+selected_script="res://Characters/Knight.gd"
 open_help=["AnimationPlayer", "CanvasItem", "CharacterBody2D", "Input", "InputEventMouse", "Node", "Node2D", "Vector2"]
 script_split_offset=70
 list_split_offset=57
