Added a sheep character

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -47,6 +47,18 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://StateMachine/RunState.gd"
 }, {
+"base": &"State",
+"class": &"SheepIdleState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://StateMachine/SheepIdle.gd"
+}, {
+"base": &"Node",
+"class": &"SheepStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://StateMachine/SheepStateMachine.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
