--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 22,
-"selection_to_column": 5,
-"selection_to_line": 23,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,16 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 33,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 4,
-"selection_from_line": 26,
-"selection_to_column": 37,
-"selection_to_line": 28,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 33,
 "syntax_highlighter": "GDScript"
 }
 
@@ -71,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 47,
-"scroll_position": 12.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 47,
@@ -85,12 +81,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 15.0,
-"selection": false,
+"row": 10,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 10,
+"selection_to_column": 17,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -131,16 +131,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 89,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 4,
-"selection_from_line": 8,
-"selection_to_column": 18,
-"selection_to_line": 8,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 89,
 "syntax_highlighter": "GDScript"
 }
 
@@ -168,6 +168,52 @@ state={
 "h_scroll_position": 0,
 "row": 3,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://StateMachine/SheepIdle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://StateMachine/SheepStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 48,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 48,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Sheep.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 20,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
