sheep takes hit

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://StateMachine/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://StateMachine/", "res://Assets/", "res://Assets/Tiny Swords (Update 010)/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Blue/Torch_Blue.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Assets/", "res://Assets/Tiny Swords (Update 010)/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Factions/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/TNT/Dynamite/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/TNT/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Barrel/Blue/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://firstmap.tscn", "res://Characters/Archer.tscn", "res://Characters/Knight.tscn", "res://walesmap.tscn", "res://Characters/Arrow.tscn", "res://Characters/Sheep.tscn")
-center_split_offset=-496
+open_scenes=PackedStringArray("res://firstmap.tscn", "res://Characters/Archer.tscn", "res://Characters/Knight.tscn", "res://walesmap.tscn", "res://Characters/Arrow.tscn", "res://Characters/Sheep.tscn", "res://Characters/GoblinThrower.tscn", "res://Characters/GoblinFighter.tscn")
+center_split_offset=-398
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://firstmap.tscn"
-selected_bottom_panel_item=0
+current_scene="res://Characters/GoblinFighter.tscn"
 
 [ScriptEditor]
 
-open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://Characters/Sheep.gd", "res://StateMachine/SheepIdle.gd", "res://StateMachine/SheepStateMachine.gd", "res://StateMachine/State.gd"]
+open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://Characters/Sheep.gd", "res://StateMachine/SheepDeadState.gd", "res://StateMachine/SheepHitState.gd", "res://StateMachine/SheepIdle.gd", "res://StateMachine/SheepStateMachine.gd", "res://StateMachine/State.gd"]
 selected_script="res://Characters/Sheep.gd"
-open_help=["AnimationPlayer", "CanvasItem", "CharacterBody2D", "Input", "InputEventMouse", "Node", "Node2D", "Transform2D", "Vector2"]
+open_help=["AnimationPlayer", "Area2D", "CanvasItem", "CharacterBody2D", "Input", "InputEventMouse", "Node", "Node2D", "Transform2D", "Vector2"]
 script_split_offset=70
 list_split_offset=57
 
