--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -48,6 +48,18 @@ list=Array[Dictionary]([{
 "path": "res://StateMachine/RunState.gd"
 }, {
 "base": &"State",
+"class": &"SheepDeadState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://StateMachine/SheepDeadState.gd"
+}, {
+"base": &"State",
+"class": &"SheepHitState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://StateMachine/SheepHitState.gd"
+}, {
+"base": &"State",
 "class": &"SheepIdleState",
 "icon": "",
 "language": &"GDScript",
