Goblin thrower state machine work

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -76,4 +76,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://StateMachine/State.gd"
+}, {
+"base": &"Node",
+"class": &"ThrowerStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://StateMachine/GobThrowerStateMachine.gd"
 }])
