sheep dies when hit with arrow

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://firstmap.tscn", "res://Characters/Archer.tscn", "res://Characters/Knight.tscn", "res://walesmap.tscn", "res://Characters/Arrow.tscn", "res://Characters/Sheep.tscn", "res://Characters/GoblinThrower.tscn", "res://Characters/GoblinFighter.tscn")
-center_split_offset=-346
+center_split_offset=-340
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://walesmap.tscn"
-selected_bottom_panel_item=0
+current_scene="res://Characters/Sheep.tscn"
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/GobThrowerStateMachine.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://Characters/Sheep.gd", "res://StateMachine/SheepDeadState.gd", "res://StateMachine/SheepHitState.gd", "res://StateMachine/SheepIdle.gd", "res://StateMachine/SheepStateMachine.gd", "res://StateMachine/State.gd", "res://StateMachine/ThrowerRunState.gd", "res://StateMachine/ThrowerAttackState.gd", "res://StateMachine/ThrowerIdleState.gd"]
-selected_script="res://StateMachine/ThrowerAttackState.gd"
+open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://StateMachine/GobThrowerStateMachine.gd", "res://StateMachine/IdleState.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://StateMachine/RunState.gd", "res://Characters/Sheep.gd", "res://StateMachine/SheepDeadState.gd", "res://StateMachine/SheepHitState.gd", "res://StateMachine/SheepIdle.gd", "res://StateMachine/SheepStateMachine.gd", "res://StateMachine/State.gd", "res://StateMachine/ThrowerAttackState.gd", "res://StateMachine/ThrowerIdleState.gd", "res://StateMachine/ThrowerRunState.gd"]
+selected_script="res://StateMachine/SheepDeadState.gd"
 open_help=["AnimationPlayer", "Area2D", "CanvasItem", "CharacterBody2D", "Input", "InputEventMouse", "Node", "Node2D", "Transform2D", "Vector2"]
 script_split_offset=200
 list_split_offset=57
