--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 27.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 37,
@@ -139,7 +139,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 89,
-"scroll_position": 0.0,
+"scroll_position": 68.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 0,
@@ -167,10 +167,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -181,16 +181,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
+"row": 14,
+"scroll_position": 1.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 1,
-"selection_to_column": 25,
-"selection_to_line": 1,
+"selection_from_column": 1,
+"selection_from_line": 14,
+"selection_to_column": 32,
+"selection_to_line": 15,
 "syntax_highlighter": "GDScript"
 }
 
@@ -199,11 +199,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 0.0,
+"row": 18,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -213,11 +213,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 19,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -227,10 +227,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 24,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -255,10 +255,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
+"row": 52,
 "scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -269,12 +269,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
+"row": 24,
 "scroll_position": 10.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 24,
+"selection_to_column": 32,
+"selection_to_line": 24,
 "syntax_highlighter": "GDScript"
 }
 
