--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://StateMachine/AttackState.gd"
 }, {
+"base": &"Node",
+"class": &"GoblinStateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://StateMachine/GobThrowerStateMachine.gd"
+}, {
 "base": &"State",
 "class": &"IdleState",
 "icon": "",
@@ -82,12 +88,6 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://StateMachine/State.gd"
-}, {
-"base": &"Node",
-"class": &"ThrowerStateMachine",
-"icon": "",
-"language": &"GDScript",
-"path": "res://StateMachine/GobThrowerStateMachine.gd"
 }, {
 "base": &"Control",
 "class": &"VirtualJoystick",
