--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,31 +19,37 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Characters/Knight.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://StateMachine/", "res://Scenes/", "res://Scenes/PlayableCharacter/", "res://Characters/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Factions/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/TNT/Dynamite/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/TNT/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Barrel/Blue/", "res://Assets/Tiny Swords (Update 010)/Effects/", "res://Assets/Tiny Swords (Update 010)/Effects/Fire/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/", "res://addons/virtual_joystick/test/")
+dock_filesystem_selected_paths=PackedStringArray("res://tilesetmap.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/PlayableCharacter/", "res://Assets/", "res://Assets/Tiny Swords (Update 010)/", "res://Assets/Tiny Swords (Update 010)/Terrain/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Rocks/", "res://Assets/Tiny Swords (Update 010)/Terrain/Water/Foam/", "res://Assets/Tiny Swords (Update 010)/Terrain/Ground/", "res://Assets/Tiny Swords (Update 010)/Terrain/Bridge/", "res://Assets/Tiny Swords (Update 010)/Resources/Sheep/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Arrow/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/", "res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Castle/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/TNT/Dynamite/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/TNT/Blue/", "res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Barrel/Blue/", "res://Assets/Tiny Swords (Update 010)/Effects/Fire/", "res://Assets/Kasaya\'s Frames/Book/", "res://Assets/Kasaya\'s Frames/Bars/2/", "res://addons/virtual_joystick/test/")
+dock_bottom=[]
+dock_closed=[]
+dock_filesystem_h_split_offset=240
+dock_filesystem_v_split_offset=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://TesterWorld.tscn", "res://firstmap.tscn", "res://Scenes/PlayableCharacter/PlayableArcher.tscn", "res://Scenes/PlayableCharacter/PlayableKnight.tscn", "res://Characters/GoblinFighter.tscn", "res://Characters/GoblinThrower.tscn", "res://Characters/GoblinTNT.tscn", "res://Characters/Knight.tscn", "res://Characters/Villager.tscn")
-center_split_offset=-315
+open_scenes=PackedStringArray("res://TesterWorld.tscn", "res://firstmap.tscn", "res://Scenes/PlayableCharacter/PlayableArcher.tscn", "res://Scenes/PlayableCharacter/PlayableKnight.tscn", "res://Characters/GoblinFighter.tscn", "res://Characters/GoblinThrower.tscn", "res://Characters/GoblinTNT.tscn", "res://Characters/Knight.tscn", "res://Characters/Villager.tscn", "res://AllTilemaps.tscn")
+center_split_offset=-514
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://Characters/Villager.tscn"
-selected_bottom_panel_item=4
+current_scene="res://firstmap.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://StateMachine/ArcherIdleState.gd", "res://StateMachine/ArcherRunState.gd", "res://StateMachine/ArcherShootState.gd", "res://StateMachine/ArcherStateMachine.gd", "res://Characters/Arrow.gd", "res://StateMachine/AttackState.gd", "res://UI/attack_button.gd", "res://firstmap.gd", "res://StateMachine/GobThrowerStateMachine.gd", "res://StateMachine/IdleState.gd", "res://UI/Joystick.gd", "res://Characters/Knight.gd", "res://StateMachine/KnightStateMachine.gd", "res://Characters/KnightSword.gd", "res://addons/virtual_joystick/test/player.gd", "res://Characters/PlayerAttack.gd", "res://Characters/PlayerIdle.gd", "res://Characters/PlayerRun.gd", "res://StateMachine/RunState.gd", "res://Characters/Sheep.gd", "res://StateMachine/SheepDeadState.gd", "res://StateMachine/SheepHitState.gd", "res://StateMachine/SheepIdle.gd", "res://StateMachine/SheepStateMachine.gd", "res://StateMachine/State.gd", "res://StateMachine/ThrowerAttackState.gd", "res://StateMachine/ThrowerIdleState.gd", "res://StateMachine/ThrowerRunState.gd", "res://addons/virtual_joystick/virtual_joystick.gd"]
-selected_script="res://Characters/Knight.gd"
+selected_script="res://firstmap.gd"
 open_help=["AnimationPlayer", "Area2D", "Array", "Camera2D", "CanvasItem", "CharacterBody2D", "Control", "Input", "InputEventAction", "InputEventMouse", "InputEventScreenTouch", "Node", "Node2D", "TouchScreenButton", "Transform2D", "Vector2"]
 script_split_offset=150
 list_split_offset=57
+zoom_factor=1.0
 
 [ShaderEditor]
 
 open_shaders=[]
 split_offset=0
 selected_shader=""
+text_shader_zoom_factor=1.0
